tests/snapshots/file@while@class_in_body.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'class': Expect expression.\nwhile (true) class Foo {}\n"
input_file: crafting_interpreters_test_files/while/class_in_body.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this', found 'class'
   ╭─[2:14]
 1 │ // [line 2] Error at 'class': Expect expression.
 2 │ while (true) class Foo {}
   ·              ──┬──
   ·                ╰── here
   ╰────
